Adjust the title page for Kobo Mini and update the build script

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -17,25 +17,30 @@
 \bibcovertitlefont
 \tunemarkup{pgkindledx}{\fontsize{18.2}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{12}{20}\selectfont}
+\tunemarkup{pgkobomini}{\fontsize{12.8}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13.5}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{15.5}{20}\selectfont}
 THE BRITISH STUDY EDITION\\
 \tunemarkup{pgkindledx}{\fontsize{16.5}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
+\tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
 {\itshape OF}\\[1ex]
 \tunemarkup{pghanlin}{\fontsize{17}{20}\selectfont}
+\tunemarkup{pgkobomini}{\fontsize{18}{20}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{18.5}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{21}{20}\selectfont}
 \urantiabook\\
 \tunemarkup{pgkindledx}{\fontsize{16.5}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
+\tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
 {\itshape ALSO KNOWN AS}\\[1ex]
 \tunemarkup{pghanlin}{\fontsize{15}{20}\selectfont}
+\tunemarkup{pgkobomini}{\fontsize{18}{20}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{15}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{18}{20}\selectfont}
