Minor tidyp for Kobo Mini

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -12,6 +12,7 @@ INTRODUCTION
 \end{center}
 
 \tunemarkup{pghanlin}{\fontsize{15}{16.7}\selectfont}
+\tunemarkup{pgkobomini}{\fontsize{17}{19.5}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{17}{20.5}\selectfont}
@@ -28,7 +29,7 @@ It has the following main features:
 \item All distance and temperature measures have been converted to metric units, except where there was even the slightest potential for error, such as in the use of ``Jerusem miles'', which was left intact. The idiomatic expressions like ``carry his pack for a mile'' were also left intact, obviously.
 \item Long and hard to memorise phrases like ``three hundred and forty\hyp{}five thousand'' have been converted to a compact form ``345,000''. Likewise, for phrases like ``seventy\hyp{}five per cent'', a more compact form of ``75\%'' was chosen. Likewise, the time designations like ``fifteen minutes past four o’clock'' now read ``16:15''.
 \item The designation of the author of each paper (and Foreword) is printed in \textit{italics} on a line by itself just before the text.
-\item SRT paragraph numbering is used both in the superscript and in the paragraph ranges printed in the header of every page.
+\item SRT paragraph numbering is used both in the superscript and in the paragraph ranges printed in the head\-er of every page.
 \item Possible textual corruptions are indicated in the footnotes.
 \end{itemize}
 
