--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -11,6 +11,7 @@
 \tunemarkup{pghanlin}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
+\tunemarkup{pgkobomini}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 %\iftotalfigures\clp\listoffigures\clp\fi XXX doesn't work: disturbs all the headings for unknown reason!
 \newpage
