Adjust image scaling factor for Kobo Mini build

--- a/tex/p024.tex
+++ b/tex/p024.tex
@@ -55,7 +55,7 @@
 \vs p024 5:5 \pc The Supreme Executives, Associate Inspectors, and Assigned Sentinels, together with the omniaphim and a host of unrevealed personalities, constitute an efficient, direct, centralized, but far\hyp{}flung system of advisory and administrative co\hyp{}ordination of all the grand universe of things and beings.
 \usection{6.\bibnobreakspace The Graduate Guides}
 \vs p024 6:1 The Graduate Guides, as a group, sponsor and conduct the high university of technical instruction and spiritual training which is so essential to mortal attainment of the goal of the ages: God, rest, and then eternity of perfected service. These highly personal beings take their name from the nature and purpose of their work. They are exclusively devoted to the tasks of guiding the mortal graduates from the superuniverses of time through the Havona course of instruction and training which serves to prepare the ascending pilgrims for admission to Paradise and the Corps of the Finality.
-\vs p024 6:2 I am not forbidden to undertake to tell you of the work of these Graduate Guides, but it is so ultraspiritual that I despair of being able to adequately portray to the material mind a concept of their manifold activities. On the mansion worlds, after your vision range is extended and you are freed from the fetters of material comparisons, you can begin to comprehend the meaning of those realities which “eye cannot see nor ear hear, and which have never entered the concept of human minds,” even those things which “God has prepared for those who love such eternal verities.” You are not always to be so limited in the range of your vision and spiritual comprehension.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkoboaurahd}{1.66}\tunemarkup{pghanlin}{1.45}\tunemarkup{pgnexus7}{1.45}\tunemarkup{pgkindledx}{1.1}]{../urantia-pictures/Troy-Bishop/where_mind_alone_cannot_go_700x525h.jpg}\caption{Where Mind Alone Cannot Go by Troy~R.~Bishop}\end{figure}}
+\vs p024 6:2 I am not forbidden to undertake to tell you of the work of these Graduate Guides, but it is so ultraspiritual that I despair of being able to adequately portray to the material mind a concept of their manifold activities. On the mansion worlds, after your vision range is extended and you are freed from the fetters of material comparisons, you can begin to comprehend the meaning of those realities which “eye cannot see nor ear hear, and which have never entered the concept of human minds,” even those things which “God has prepared for those who love such eternal verities.” You are not always to be so limited in the range of your vision and spiritual comprehension.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{1.45}\tunemarkup{pgkoboaurahd}{1.66}\tunemarkup{pghanlin}{1.45}\tunemarkup{pgnexus7}{1.45}\tunemarkup{pgkindledx}{1.1}]{../urantia-pictures/Troy-Bishop/where_mind_alone_cannot_go_700x525h.jpg}\caption{Where Mind Alone Cannot Go by Troy~R.~Bishop}\end{figure}}
 \vs p024 6:3 The Graduate Guides are engaged in piloting the pilgrims of time through the seven circuits of Havona worlds. The guide who greets you upon your arrival on the receiving world of the outer Havona circuit will remain with you throughout your entire career on the heavenly circuits. Though you will associate with countless other personalities during your sojourn on a billion worlds, your Graduate Guide will follow you to the end of your Havona progression and will witness your entrance into the terminal slumber of time, the sleep of eternity transit to the Paradise goal, where, upon awakening, you will be greeted by the Paradise Companion assigned to welcome you and perhaps to remain with you until you are initiated as a member of the Mortal Corps of the Finality.
 \vs p024 6:4 \pc The number of Graduate Guides is beyond the power of human minds to grasp, and they continue to appear. Their origin is something of a mystery. They have not existed from eternity; they mysteriously appear as they are needed. There is no record of a Graduate Guide in all the realms of the central universe until that far\hyp{}distant day when the first mortal pilgrim of all time made his way to the outer belt of the central creation. The instant he arrived on the pilot world of the outer circuit, he was met with friendly greetings by Malvorian, the first of the Graduate Guides and now the chief of their supreme council and the director of their vast educational organization.
 \vs p024 6:5 On the Paradise records of Havona, in the section denominated “Graduate Guides,” there appears this initial entry:
