Make Kobo AuraHD default

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -9,9 +9,9 @@
 % various page sizes
 %\tunemarkuptag{pghanlin}
 %\tunemarkuptag{pgnexus7}
-%\tunemarkuptag{pgkoboaurahd}
+\tunemarkuptag{pgkoboaurahd}
 %\tunemarkuptag{pgkindledx}
-\tunemarkuptag{pgkobomini}
+%\tunemarkuptag{pgkobomini}
 
 \RequirePackage[figure,curq]{totalcount}
 \RequirePackage[\tunemarkup{pgkindledx}{doublecol,}parvs]{ubook}
