Mention the quiz on the README + cleanup

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -38,7 +38,7 @@ Many thanks to my friend Mitch Austin for helpful suggestions and comments, some
 Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to consider to be my mentor and friend.
 I highly recommend many resources available on his website at \texttt{http://www.starspring.com}.
 
-\tunemarkuptwo{pgkindledx}{}{This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) based on the material of the book and called \bibemph{The Cosmic Citizenship Quiz}.}
+\tunemarkuptwo{pgkindledx}{}{This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) based on the material of the book called \bibemph{The Cosmic Citizenship Quiz}.}
 
 \begin{flushleft}
 \itshape
