Change my email address and adjust TOC font sizes

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -537,7 +537,7 @@
 \newcommand{\parttitlefontsize}{\large}
 \newcommand{\bibbookend}{\fontsize{20}{22}\selectfont}
 \newcommand{\urantiamainfontsize}{20/22}
-\renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2,WordSpace=1.2}\fontsize{13}{15}\selectfont}
+\renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2,WordSpace=1.2}\fontsize{13}{15}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{10.5}{17}\selectfont}
 \renewcommand{\author}[1]{{\fontsize{11}{9}\bfseries\itshape\begin{center}#1\end{center}\fancyhead[CE]{\bibheadfont\MakeUppercase{#1}}}}
 \newcommand{\bibsectitlefont}{\fontsize{8}{9}\selectfont}
@@ -574,8 +574,8 @@
 \newcommand{\parttitlefontsize}{\large}
 \newcommand{\bibbookend}{\fontsize{16.4}{18.5}\selectfont}
 \newcommand{\urantiamainfontsize}{16.4/18.5}
-\renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2,WordSpace=1.2}\fontsize{11}{11}\selectfont}
-\renewcommand{\bibtocfont}{\fontsize{10}{11}\selectfont}
+\renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2,WordSpace=1.2}\fontsize{14}{17}\bfseries}
+\renewcommand{\bibtocfont}{\fontsize{10}{17}\selectfont}
 \renewcommand{\author}[1]{{\fontsize{11}{9}\bfseries\itshape\begin{center}#1\end{center}\fancyhead[CE]{\bibheadfont\MakeUppercase{#1}}}}
 \newcommand{\bibsectitlefont}{\fontsize{8}{9}\selectfont}
 \renewcommand{\footnotesize}{\fontsize{14}{16}\selectfont}
@@ -614,7 +614,7 @@
 \newcommand{\bibbookend}{\fontsize{16.4}{18.5}\selectfont}
 \newcommand{\urantiamainfontsize}{16.4/18.5}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2,WordSpace=1.2}\fontsize{15}{17}\bfseries}
-\renewcommand{\bibtocfont}{\fontsize{12.0}{15}\selectfont}
+\renewcommand{\bibtocfont}{\fontsize{12.0}{19}\selectfont}
 \renewcommand{\author}[1]{{\fontsize{13}{9}\bfseries\itshape\begin{center}#1\end{center}\fancyhead[CE]{\bibheadfont\MakeUppercase{#1}}}}
 \newcommand{\bibsectitlefont}{\fontsize{10}{10}\selectfont}
 \renewcommand{\footnotesize}{\fontsize{14}{16}\selectfont}
@@ -693,7 +693,7 @@
 \AtBeginDocument{%
 \hypersetup{%
   pdftitle={The British Study Edition of the Urantia Papers},%
-  pdfauthor={Tigran Aivazian <tigran@bibles.org.uk>},%
+  pdfauthor={Tigran Aivazian <aivazian.tigran@gmail.com>},%
   pdfcreator={Bibles.org.uk Typesetting Environment},%
   pdfsubject={The Urantia Papers in British English (also known as "The Urantia Book")},%
   pdfkeywords={Earth,Urantia,Truth,History,Religion,English,English UK,Revelation,God,Jesus},%
