--- a/tex/title.tex
+++ b/tex/title.tex
@@ -91,7 +91,7 @@ The text of the Urantia Papers is in the \itshape public domain}.\\[5pt]
 Cover design by Gary Tonge, www.vision-afar.com.\\
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
-Please send all comments \&\ suggestions to {\makeatletter\upshape tigran@bibles.org.uk\makeatother}\\
+Please send all comments \&\ suggestions to {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\
 The apparatus (marked with a circle in the text) contains all significant changes made since the 1955 first edition of the Urantia Book.\\
 The symbol \pc\tunemarkup{pgluluhb}{\kern-2pt} marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\\
 The asterisk * indicates a study note other than a textual variant.\\[5pt]
