Raise tolerance for Kobo Mini build to 9999

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -373,6 +373,7 @@
 %\tunemarkup{pgluluhb}{\tolerance=9999}
 \tunemarkup{pgkindledx}{\tolerance=9999}
 \tunemarkup{pghanlin}{\tolerance=9999}
+\tunemarkup{pgkobomini}{\tolerance=9999}
 \tunemarkup{pgkoboaurahd}{\tolerance=9999}
 \tunemarkup{pgnexus7}{\tolerance=9999}
 %\widowpenalty=9000
